Added interpretation of backslash escapes for every "echo" command

--- a/lib/lang/Lire le fichier CSV.txt
+++ b/lib/lang/Lire le fichier CSV.txt
@@ -19,7 +19,7 @@ Toutes les colonnes suivantes contiennent chacune le message à afficher, pour c
         - Une fois ceci fait, en utilisant le même index de la ligne, obtenir la valeur de la ligne dans la troisième colonne, contenant le type de message à afficher.
             - Si la valeur est égale à "Error" --> Écrire, dans le fichier, sans espace après le '=' --> "$(EchoError "
             - Si la valeur est égale à "Newstep" --> Écrire, dans le fichier, sans espace après le '=' --> "$(EchoNewstep "
-            - Si la valeur est égale à "None" --> Écrire, dans le fichier, sans espace après le '=' --> "$(echo "
+            - Si la valeur est égale à "None" --> Écrire, dans le fichier, sans espace après le '=' --> "$(echo -e "
             - Si la valeur est égale à "Success" --> Écrire, dans le fichier, sans espace après le '=' --> "$(EchoSuccess "
             - Sinon, afficher un message d'erreur et quitter le programme. Renvoyer un code d'erreur. 
             
