Adding module LaTeX documentation

--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -14,7 +14,7 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Introduction à Bash Utils}\color{white}
+\title{\color{red}Fonctionnement du gestionnaire de modules}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
@@ -27,3 +27,23 @@
   /Subject  (Introduction à Bash Utils)
   /Keywords ()
 }
+
+\definecolor{mauve}{RGB}{128, 0, 128}
+
+\begin{document}
+ \maketitle
+ \tableofcontents
+ \newpage
+ 
+ \color{red}
+ \section{Introduction}\color{white}
+ 
+  \color{green}
+  \subsection{Présentation générale}\color{white}
+  
+  \color{green}
+  \subsubsection{Fichiers}\color{white}
+
+ \color{red}
+ \section{Liste des modules}\color{white}
+\end{document}
