--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -20,11 +20,11 @@
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Introduction à Bash Utils)
+  /Title    (Fonctionnement du gestionnaire de modules)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Introduction à Bash Utils)
+  /Subject  (Fonctionnement du gestionnaire de modules)
   /Keywords ()
 }
 
@@ -34,16 +34,57 @@
  \maketitle
  \tableofcontents
  \newpage
- 
- \color{red}
- \section{Introduction}\color{white}
- 
-  \color{green}
-  \subsection{Présentation générale}\color{white}
-  
-  \color{green}
-  \subsubsection{Fichiers}\color{white}
 
  \color{red}
- \section{Liste des modules}\color{white}
+ \section{Introduction}\color{white}
+
+  \color{green}
+  \subsection{Présentation générale}\color{white}
+  Ici, un module est un regroupement de fichiers source et de fichiers de configurations de la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
+
+  Le gestionnaire de modules est un outil permetttant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.\linebreak
+
+  Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.\linebreak
+
+  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur.
+
+  \color{green}
+  \subsection{Dossiers}\color{white}
+  Ce gestionnaire est composé d'un dossier (caché pour ne pas trop encombrer le dossier personnel, où il doit être installé) : \textbf{\color{lime}.Bash-utils\color{white}}\linebreak
+  
+  Ce dossier est composé de deux sous-dossiers, comprenant également des sous dossiers : \textbf{\color{lime}config\color{white}} et \textbf{\color{lime}modules\color{white}}.\linebreak
+
+  Le dossier \textbf{\color{lime}config\color{white}} est constitué du dossier \textbf{\color{lime}modules\color{white}}, qui contient en sous-dossiers des dossiers de modules contenant les fichiers de configuration propres à chaque module.\linebreak
+
+  Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.
+
+  \color{green}
+  \subsection{Fichiers}\color{white}
+  Ce gestionnaire est composé d'un fichier à placer dans le dossier personnel de tous les utilisateurs de la librairie :  \textbf{\color{lime}Bash-utils-init.sh\color{white}}.\linebreak
+
+  Parmi les fichiers propres à chaque module, deux d'entre eux doivent obligatoirement être présents :\linebreak
+
+  - \textbf{\color{lime}module.conf\color{white} :} Ce fichier, à placer dans le dossier \textbf{\color{lime}.Bash-utils/config/modules/\$nom\_du\_module\color{white}}, contient chaque variable utile au fichier \textbf{\color{lime}Initializer.sh\color{white}}, présenté ci-dessous.\linebreak
+
+  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialiise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
+
+  Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
+
+  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la libraire Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}
+
+ \color{red}
+ \section{Liste des modules officiels}\color{white}
+
+  \color{green}
+  \subsection{Main}\color{white}
+
+  \color{blue}
+  \subsubsection{Présentation}\color{white}
+
+  \color{blue}
+  \subsubsection{Liste des fonctions}\color{white}
+
+  \color{blue}
+  \subsubsection{Liste des configurations}\color{white}
+    
 \end{document}
