--- a/lib/lang/Lire le fichier CSV.txt
+++ b/lib/lang/Lire le fichier CSV.txt
@@ -1,17 +1,17 @@
 ## PRÉSENTATION :
 Trois premières colonnes :
-    - La première contient les noms de chaque CheckTxtFmt,
-    - La deuxième n'est là que pour aider, pour savoir dans quel fichier la CheckTxtFmt est présente, et dans quelle fonction,
+    - La première contient les noms de chaque variable,
+    - La deuxième n'est là que pour aider, pour savoir dans quel fichier la variable est présente, et dans quelle fonction,
     - La troisième contient le type de message. Elle en contient quatre : Error (message d'erreur), Newstep (message de changement de sous-étape),
         None (affichage normal, pas de statut particulier) et Success (message de succès).
     
-Toutes les colonnes suivantes contiennent chacune le message à afficher, pour chaque nom de CheckTxtFmt de la première colonne, selon leur ligne. 
+Toutes les colonnes suivantes contiennent chacune le message à afficher, pour chaque nom de variable de la première colonne, selon leur ligne. 
 
 
 ## PROCÉDURE
 1) Parcourir la toute première ligne du fichier CSV jusqu'à trouver le nom de la colonne contenant la langue passée en argument. Obtenir son index.
 
-2) Tant que la première colonne (contenant les noms des CheckTxtFmts) n'a pas été entièrement parcourue.
+2) Tant que la première colonne (contenant les noms des variables) n'a pas été entièrement parcourue.
     - Si le premier caractère est égal à un '/' (permet de garder un espace vide pour plus de lisibilité),
         alors le parseur passe à la ligne suivante en incrémenant l'index de la ligne de 1.
 
@@ -24,7 +24,7 @@ Toutes les colonnes suivantes contiennent chacune le message à afficher, pour c
             - Sinon, afficher un message d'erreur et quitter le programme. Renvoyer un code d'erreur. 
             
         - Une fois ceci fait, récupérer la valeur entregistrée sur la même ligne dans la colonne contenant le message selon la langue.
-        - Désormais, il ne reste plus qu'à écrire --> ")" à la suite de la déclaration de CheckTxtFmts dans le fichier temporaire, puis à incrémenter la valeur de la CheckTxtFmt enregistrant le numéro de la ligne.
+        - Désormais, il ne reste plus qu'à écrire --> ")" à la suite de la déclaration de variables dans le fichier temporaire, puis à incrémenter la valeur de la variable enregistrant le numéro de la ligne.
 
 
 ## GESTION D'ERREURS
